--- a/Markdig.Extensions.Xmdl.csproj
+++ b/Markdig.Extensions.Xmdl.csproj
@@ -4,12 +4,12 @@
 	<PropertyGroup>
 		<TargetFrameworks>net6.0;net8.0</TargetFrameworks>
 		<LangVersion>12.0</LangVersion>
-		<Version>3.0.0</Version>
+		<Version>3.1.0</Version>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 
-		<AssemblyVersion>3.0.0.0</AssemblyVersion>
-		<FileVersion>3.0.0</FileVersion>
-		<VersionPrefix>3.0.0</VersionPrefix>
+		<AssemblyVersion>3.1.0.0</AssemblyVersion>
+		<FileVersion>3.1.0</FileVersion>
+		<VersionPrefix>3.1.0</VersionPrefix>
 		<Authors>Czompi</Authors>
 		<Company>Czompi Software</Company>
 		<Product>Markdig.Extensions.Xmdl</Product>
@@ -37,11 +37,11 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.1" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.0" />
 		<PackageReference Include="Markdig" Version="0.37.0" ExcludeAssets="runtime">
 			<Private>false</Private>
 		</PackageReference>
-		<PackageReference Include="SS.NuGet.Publish" Version="1.0.2311.32">
+		<PackageReference Include="SS.NuGet.Publish" Version="1.0.2311.32" Condition="'$(Configuration)'=='Release'">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
